--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,27 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.emoji {
+  height: 250px;
+  width: 250px;
+  background-color: beige;
+  border-radius: 50%;
+  position: relative;
+  filter: drop-shadow(5px 5px 10px rgb(190, 190, 190));
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.eyes {
+  border-radius: 50%;
+  background-color: black;
+  height: 30px;
+  width: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.eye1 {
+  position: absolute;
+  top: 50px;
+  left: 35%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.eye2 {
+  position: absolute;
+  top: 50px;
+  left: 55%;
 }
